# world-names

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml  test.yml
etl/: README.md  _lib.py  auto_cluster.py  build_sqlite.py  cluster_etymology.py  extract_factbook.py  fetch_countries.py  fetch_country_languages.py  fetch_endonyms.py  fetch_exonyms.py  fetch_languages.py  pyproject.toml
etl/data/: factbook_languages.json
etl/roots/: ABW.yaml  AFG.yaml  AGO.yaml  ALB.yaml  AND.yaml  ARE.yaml  ARG.yaml  ARM.yaml  ATG.yaml  AUS.yaml  AUT.yaml  AZE.yaml  BDI.yaml  BEL.yaml  BEN.yaml  BFA.yaml  BGD.yaml  BGR.yaml  BHR.yaml  BHS.yaml  BIH.yaml  BLR.yaml  BLZ.yaml  BOL.yaml  BRA.yaml  BRB.yaml  BRN.yaml  BTN.yaml  BWA.yaml  CAF.yaml  CAN.yaml  CHE.yaml  CHL.yaml  CHN.yaml  CIV.yaml  CMR.yaml  COD.yaml  COG.yaml  COK.yaml  COL.yaml  (+165 more)
etl/tests/: test_auto_cluster.py  test_clustering.py  test_factbook_parse.py  test_parse.py  test_similarity.py
public/: world-names.sqlite
src/: App.css  App.tsx  main.tsx
src/components/: DetailPanel.test.tsx  DetailPanel.tsx  Legend.tsx  WorldMap.tsx  world-map-handlers.test.ts  world-map-handlers.ts
src/data/: db.ts  sqlite-wasm.d.ts  types.ts  use-cluster-colors.ts  use-clusters.ts  use-country-detail.ts  use-inspection-detail.ts
src/dev/: handles.ts
src/lib/: cluster-label.test.ts  cluster-label.ts  similarity.test.ts  similarity.ts
src/store/: selection.ts
tests/e2e/: cluster-encoding.spec.ts  db-integration.spec.ts  (+4 more)
