[project]
name = "world-names-etl"
version = "0.0.1"
description = "Build-time pipeline that emits public/world-names.sqlite"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
