[project]
name = "world-names-etl"
version = "0.0.1"
description = "Build-time pipeline that emits public/world-names.sqlite"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
  # Unidecode transliterates every Unicode string to plain ASCII so the
  # string-similarity passes through _lib.normalized_similarity / the
  # auto-clusterer compare ACROSS scripts. Without it, Cyrillic vs
  # Latin / Arabic / Devanagari all have edit-distance 1.0 (zero
  # overlap) and the clusters degenerate to one-per-script. Pure
  # Python, no compiled code, deterministic; safe in a build pipeline.
  "unidecode>=1.3",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
